--- a/MyLibrary2/Views/Books/Create.cshtml
+++ b/MyLibrary2/Views/Books/Create.cshtml
@@ -19,12 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Height" class="control-label"></label>
-                <input asp-for="Height" class="form-control" />
+                <input asp-for="Height" class="form-control" min="1" />
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Width" class="control-label"></label>
-                <input asp-for="Width" class="form-control" />
+                <input asp-for="Width" class="form-control" min="1" />
                 <span asp-validation-for="Width" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -66,7 +66,6 @@
             var width = document.querySelector('input[name="Width"]').value;
             console.log("Height: " + height + ", Width: " + width);
 
-            // בצע קריאת AJAX לפונקציה בקונטרולר עם הערכים הנוספים
             fetch(`/Books/GetShelfs?libraryId=${selectedLibraryId}&height=${height}&width=${width}`)
                 .then(response => response.json())
                 .then(data => {
