--- a/MyLibrary2/Views/Shared/_Layout.cshtml
+++ b/MyLibrary2/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">My Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookSets" asp-action="Index">My Book Sets</a>
+                        </li>
                     </ul>
                 </div>
             </div>
