--- a/MyLibrary2/Views/Books/Create.cshtml
+++ b/MyLibrary2/Views/Books/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>הוספת ספר חדש</h1>
 
-<h4>Book</h4>
+<h4>ספר</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">חזרה לרשימה</a>
 </div>
 
 @section Scripts {
