--- a/MyLibrary2/Views/Shelves/Index.cshtml
+++ b/MyLibrary2/Views/Shelves/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Library)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmptySpace)
+            </th>
 
             <th></th>
         </tr>
@@ -42,6 +45,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Library.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmptySpace)
             </td>
  
             <td>
