--- a/MyLibrary2/Views/Shelves/Index.cshtml
+++ b/MyLibrary2/Views/Shelves/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Shelves List</h1>
+<h1>רשימת מדפים</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">צור מדף חדש</a>
 </p>
 <table class="table">
     <thead>
@@ -26,6 +26,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EmptySpace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BooksCount)
             </th>
 
             <th></th>
@@ -48,6 +51,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EmptySpace)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BooksCount)
             </td>
  
             <td>
